# js-finder-py

./: .gitignore  .prettierignore  build.py  build.sh  index.html  numba_pokemon_prngs-0.1.0-py3-none-any.whl  requirements.txt
.github/workflows/: jekyll.yml  pages.yml
css/: main.css  states.css  vars.css
js_finder/: README.md  pyproject.toml
js_finder/js_finder/: bdsp_coin_flip.py  bdsp_seed_finder.py  channel_validator.py  crystal_tid.py  g2_rng.py  g3_calibration.py  g3_searcher.py  gc_rtc.py  ioa_wailord_respawn.py  seed_to_time.py  stadium2_decoration_odds.py  swsh_npc_calibration.py  ten_lines.py
js_finder/js_finder/resources/: ten_lines_precalc.npy  xoroshiro_state_recovery.npy  xorshift_matrix.npy
js_finder/js_finder/util/: __init__.py  matrix.py
pages/: bdsp-coin-flip.html  bdsp-coin-flip.js  bdsp-seed-finder-old.html  bdsp-seed-finder.html  bdsp-seed-finder.js  channel-validator.html  crystal-tid.html  frlg-wild-calibration.html  g3-calibration.html  g3-searcher.html  g4ids_shader.wgsl  gc-rtc.html  gpu-g4ids.html  ioa-wailord-respawn.html  seed-to-time.html  stadium2_decoration_odds.html  swsh-npc-calibration.html  swsh-npc-calibration.js  ten-lines.html
pages/wgpu_gen4ids/: package.json  wgpu_gen4ids.d.ts  wgpu_gen4ids.js  wgpu_gen4ids_bg.wasm  wgpu_gen4ids_bg.wasm.d.ts
seed_to_time/: pyproject.toml
seed_to_time/seed_to_time/: __init__.py
