[tool.poetry]
name = "js-finder"
version = "0.1.0"
description = "JS Finder module for pyodide to access"
authors = ["lincoln-lm <73306575+Lincoln-LM@users.noreply.github.com>"]
license = "GPL-3.0-only"
readme = "README.md"
packages = [{include = "js_finder"}]

[tool.poetry.dependencies]
python = ">= 3.9, < 3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
